# mcp-servers

airflow-mcp-server/: README.md  pyproject.toml
airflow-mcp-server/src/airflow_mcp_server/: airflow_client.py  server.py
airflow-mcp-server/tests/: test_airflow_client.py
dbt-mcp-server/: README.md
dbt-mcp-server/src/dbt_mcp_server/: dbt_client.py
dbt-mcp-server/tests/: test_dbt_client.py
gitlab-mcp-server/: README.md
gitlab-mcp-server/src/gitlab_mcp_server/: gitlab_client.py  server.py
gitlab-mcp-server/tests/: test_gitlab_client.py
slack-mcp-server/: README.md
slack-mcp-server/src/slack_mcp_server/: server.py
